feat ( volume type ) : add list endpoint
